# wazuhpy

./: README.md  pyproject.toml
src/wazuhpy/: __init__.py  wazuhpy.py
src/wazuhpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wazuhpy/endpoints/: agents.py  endpoint.py  groups.py  syscollector.py  vulnerability.py
tests/: test_agents_endpoint.py  test_client.py  test_groups_endpoint.py  test_syscollector_endpoint.py
