[build-system]
requires = ["setuptools>=69.1"]
build-backend = "setuptools.build_meta"

[project]
name = "wazuhpy"
description = "Wazuh API Wrapper"
license = { text = "MIT" }
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    {name = "nheusden", email = "44884540+nheusden@users.noreply.github.com"}
]
keywords = ["wazuh", "api", "wrapper"]
classifiers = [
]
dependencies = [
    "requests~=2.31"
]

[project.optional-dependencies]
dev = [
    "responses>=0.25.0",
    "pytest>=8.0.2"
]

[project.urls]
"Homepage" = "https://github.com/nheusden/wazuhpy"

[tool.ruff]
ignore = ["E501"]
[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]